# h5_manager_scripts

./: .gitignore  CHANGELOG.md  commands_tried.txt  config.yaml  datasets2h5.sh  h5Converter.py  h5visualizer.py  mergeh5.py  pyproject.toml  readme.md
h5manager/: cli.py  config.py  converter.py  merger.py  visualizer.py
tests/: test_cli.py
